# sized-data-derive

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
